recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:6: error: type mismatch;
 found   : Unit
 required: Int
  else if(l.head == v){
       ^